bug(EJ2-5584): Committing for alignment fix

--- a/styles/index.css
+++ b/styles/index.css
@@ -265,7 +265,6 @@
 
 .theme-wrapper {
     height: 32px;
-    width: 145px;
     margin-top: 5px;
     cursor: default;
     padding: 0px 10px;
